--- a/app/src/main/res/layout/landing_fragment.xml
+++ b/app/src/main/res/layout/landing_fragment.xml
@@ -13,4 +13,6 @@
         android:padding="8dp"
         tools:listitem="@layout/item_movie" />
 
+    <include layout="@layout/layout_loading" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
