--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,9 +15,12 @@
     <color name="mediumGray">#D1D1D1</color>
     <color name="green">#00C980</color>
 
-    <color name="colorPrimary">#6200EA</color>
-    <color name="colorPrimaryDark">#5502C8</color>
-    <color name="colorAccent">#9D46FF</color>
+    <color name="colorPrimary">#000000</color>
+    <color name="colorPrimaryDark">#231160</color>
+    <color name="colorAccent">#FFFFFFFF</color>
+
+    <color name="colorCardBackground">#414143</color>
+    <color name="transparent">#00000000</color>
 
 
 </resources>
