--- a/app/src/main/res/layout/movie_detail_fragment.xml
+++ b/app/src/main/res/layout/movie_detail_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/green"
+    android:background="@color/colorCardBackground"
     android:fitsSystemWindows="true"
     tools:context=".ui.moviedetail.MovieDetailFragment">
 
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
-            app:layout_scrollFlags="scroll">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
                 android:id="@+id/iv_movieTitle"
@@ -26,6 +26,7 @@
                 android:adjustViewBounds="true"
                 android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax"
+                tools:ignore="ContentDescription"
                 tools:src="@tools:sample/backgrounds/scenic" />
 
             <ImageButton
@@ -33,8 +34,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
+                android:background="@drawable/ic_back"
                 android:padding="8dp"
-                android:src="@drawable/ic_arrow_back" />
+                android:src="@drawable/ic_arrow_back"
+                tools:ignore="ContentDescription" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
@@ -42,6 +45,8 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="8dp"
+        app:behavior_overlapTop="68dp"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <LinearLayout
@@ -68,29 +73,29 @@
                     android:layout_toEndOf="@id/iv_moviePoster"
                     android:orientation="vertical">
 
-                    <com.google.android.material.textview.MaterialTextView
+                    <TextView
                         android:id="@+id/movieTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textSize="22sp"
                         android:textStyle="bold"
-                        tools:text="@tools:sample/full_names" />
+                        android:text="오문희" />
 
-                    <com.google.android.material.textview.MaterialTextView
+                    <TextView
                         android:id="@+id/movieGenres"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
                         android:layout_marginBottom="4dp"
                         android:textSize="17sp"
-                        tools:text="Action | Comedy" />
+                        tools:text="액션 | 로맨스" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
-                        <com.google.android.material.textview.MaterialTextView
+                        <TextView
                             android:id="@+id/movieRuntime"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -99,10 +104,10 @@
                             android:drawableStart="@drawable/ic_time"
                             android:drawablePadding="4dp"
                             android:gravity="center_vertical"
-                            android:textSize="15sp"
-                            android:text="120분" />
+                            android:text="120분"
+                            android:textSize="15sp" />
 
-                        <com.google.android.material.textview.MaterialTextView
+                        <TextView
                             android:id="@+id/movieReleaseDate"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -112,8 +117,8 @@
                             android:drawableStart="@drawable/ic_calendar"
                             android:drawablePadding="4dp"
                             android:gravity="center_vertical"
-                            android:textSize="15sp"
-                            android:text="개봉일" />
+                            android:text="개봉일"
+                            android:textSize="15sp" />
 
                     </LinearLayout>
 
@@ -131,7 +136,7 @@
                             android:isIndicator="true"
                             tools:rating="4.0" />
 
-                        <com.google.android.material.textview.MaterialTextView
+                        <TextView
                             android:id="@+id/movieVoteCount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -141,8 +146,8 @@
                             android:drawableEnd="@drawable/ic_people"
                             android:drawablePadding="8dp"
                             android:gravity="center_vertical"
-                            android:textSize="15sp"
-                            android:text="1000" />
+                            android:text="1000"
+                            android:textSize="15sp" />
 
                     </LinearLayout>
 
@@ -155,17 +160,19 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
-                android:text="OverView"
+                android:layout_margin="7dp"
+                android:text="줄거리"
                 android:textSize="20sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/movieOverview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="7dp"
+                android:maxLines="10"
                 android:textSize="15sp"
-                android:maxLines="5"
-                tools:text="@tools:sample/lorem/random" />
+                tools:text="영화는 전설이다." />
 
         </LinearLayout>
 
