--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,41 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MovieTrend" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.MovieTrend" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryVariant">@color/colorPrimaryDark</item>
+        <item name="colorOnPrimary">@color/colorAccent</item>
         <!-- Customize your theme here. -->
+
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:fitsSystemWindows">true</item>
+        <item name="android:windowBackground">@drawable/background</item>
+
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+
+        <item name="android:statusBarColor">@color/transparent</item>
+
+        // https://youngest-programming.tistory.com/381
+
     </style>
+
+
 </resources>
+
+
+<!--
+    &lt;!&ndash; Base application theme. &ndash;&gt;
+<style name="Theme.MovieTrend" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+&lt;!&ndash; Primary brand color. &ndash;&gt;
+<item name="colorPrimary">@color/purple_500</item>
+<item name="colorPrimaryVariant">@color/purple_700</item>
+<item name="colorOnPrimary">@color/white</item>
+&lt;!&ndash; Secondary brand color. &ndash;&gt;
+<item name="colorSecondary">@color/teal_200</item>
+<item name="colorSecondaryVariant">@color/teal_700</item>
+<item name="colorOnSecondary">@color/black</item>
+&lt;!&ndash; Status bar color. &ndash;&gt;
+<item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+&lt;!&ndash; Customize your theme here. &ndash;&gt;
+</style>-->
