--- a/app/src/main/res/layout/movie_detail_fragment.xml
+++ b/app/src/main/res/layout/movie_detail_fragment.xml
@@ -45,7 +45,6 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="8dp"
         app:behavior_overlapTop="68dp"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
@@ -56,7 +55,8 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="16dp">
 
                 <ImageButton
                     android:id="@+id/iv_moviePoster"
@@ -77,9 +77,9 @@
                         android:id="@+id/movieTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:text="오문희"
                         android:textSize="22sp"
-                        android:textStyle="bold"
-                        android:text="오문희" />
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/movieGenres"
@@ -104,7 +104,7 @@
                             android:drawableStart="@drawable/ic_time"
                             android:drawablePadding="4dp"
                             android:gravity="center_vertical"
-                            android:text="120분"
+                            android:text="분"
                             android:textSize="15sp" />
 
                         <TextView
@@ -158,9 +158,10 @@
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="7dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
-                android:layout_margin="7dp"
+                android:paddingHorizontal="16dp"
                 android:text="줄거리"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -170,9 +171,30 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="7dp"
+                android:paddingHorizontal="16dp"
                 android:maxLines="10"
                 android:textSize="15sp"
                 tools:text="영화는 전설이다." />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="7dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:paddingHorizontal="16dp"
+                android:text="배우"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_castActor"
+                android:layout_width="match_parent"
+                android:clipToPadding="false"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="16dp"
+                tools:itemCount="1"
+                tools:listitem="@layout/item_cast" />
 
         </LinearLayout>
 
