--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,5 +22,17 @@
         <argument
             android:name="movieId"
             app:argType="long" />
+        <action
+            android:id="@+id/action_movieDetailFragment_to_actorFragment"
+            app:destination="@id/actorFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/actorFragment"
+        android:name="com.ksw.movietrend.ui.actor.CastFragment"
+        android:label="fragment_actor"
+        tools:layout="@layout/fragment_cast" >
+        <argument
+            android:name="cast"
+            app:argType="com.ksw.movietrend.model.Cast" />
     </fragment>
 </navigation>
