--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardUseCompatPadding="true"
     app:cardBackgroundColor="@color/colorCardBackground"
+    app:cardUseCompatPadding="true"
     app:contentPadding="8dp">
 
     <LinearLayout
@@ -24,29 +24,37 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center_vertical"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
+            android:gravity="center_vertical"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_rate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="end"
                 android:layout_marginBottom="17dp"
+                android:gravity="end"
                 android:text="10.0"
                 android:textColor="@color/yellow"
-                android:textSize="13sp"
-                />
+                android:textSize="13sp" />
 
             <TextView
                 android:id="@+id/tv_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="23sp"
                 android:text="영화 제목"
-                android:textStyle="bold"/>
+                android:textSize="23sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_language"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
+                android:text="언어"
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tv_releaseDate"
@@ -54,8 +62,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
-                android:textSize="19sp"
-                android:text="개봉일" />
+                android:text="개봉일"
+                android:textSize="19sp" />
 
             <TextView
                 android:id="@+id/tv_overView"
@@ -63,8 +71,8 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="2"
-                android:textSize="17sp"
-                android:text="영화 설명" />
+                android:text="영화 설명"
+                android:textSize="17sp" />
 
         </LinearLayout>
 
