--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/landingFragment"
-        android:name="com.ksw.movietrend.ui.landing.LandingFragment"
+        android:name="com.ksw.movietrend.ui.popular.LandingFragment"
         android:label="landing_fragment"
         tools:layout="@layout/landing_fragment" >
         <action
@@ -35,4 +35,18 @@
             android:name="cast"
             app:argType="com.ksw.movietrend.model.Cast" />
     </fragment>
+    <fragment
+        android:id="@+id/upcomingFragment"
+        android:name="com.ksw.movietrend.ui.upcoming.UpcomingFragment"
+        android:label="fragment_upcoming"
+        tools:layout="@layout/fragment_upcoming" >
+        <action
+            android:id="@+id/action_upcomingFragment_to_movieDetailFragment"
+            app:destination="@id/movieDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/trendingFragment"
+        android:name="com.ksw.movietrend.ui.trending.TrendingFragment"
+        android:label="fragment_trending"
+        tools:layout="@layout/fragment_trending" />
 </navigation>
