--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -10,7 +10,7 @@
         android:icon="@drawable/ic_upcoming" />
 
     <item android:id="@+id/trendingFragment"
-        android:title="Trending"
-        android:icon="@drawable/ic_trending" />
+        android:title="NowPlaying"
+        android:icon="@drawable/ic_play" />
 
 </menu>
