--- a/app/src/main/res/layout/item_cast.xml
+++ b/app/src/main/res/layout/item_cast.xml
@@ -22,6 +22,7 @@
         android:gravity="center"
         android:lines="2"
         android:maxLines="2"
+        android:textSize="16sp"
         android:text="배우이름" />
 
 
